# backend-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py
app/api/: __init__.py  cache.py  filter.py  proxy.py
app/api/author/: router.py  schema.py
app/api/v1/: __init__.py  author.py  diary.py  loader.py  note.py  point.py
app/api/v1/loader/: api.py
app/api/v1/routes/: author_to.py  notes_to_api.py  utils.py
app/auth/: __init__.py  decorators.py  routes.py
app/db/: client.py  schema.py
app/loader/: load_example.json  loader.py
app/schemas/: __init__.py
backend/: __init__.py  json_extractor.py  load_example.json  loader.py  main.py
docs/plans/: 2026-05-16-query-filtering.md
docs/specs/: 2026-05-16-query-filtering-design.md
